# manx

./: README.md
_docs/: architecture.md  roadmap.md
api/: Cargo.toml  README.md  sample.env
api-phx/: .gitignore  README.md  mix.exs
api-phx/config/: config.exs  dev.exs  prod.exs  test.exs
api-phx/lib/: manx.ex  manx_web.ex
api-phx/test/: test_helper.exs
api-rails/: Gemfile
api-rails/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
api-rails/db/: schema.rb
api-rails/spec/: rails_helper.rb
api/migrations/2019-01-24-005047_create_users/: up.sql
api/migrations/2019-05-20-030629_create_base_tables/: down.sql  up.sql
api/migrations/2019-05-29-014706_create_base_tables/: down.sql  up.sql
api/src/: encryption.rs  error.rs  lib.rs  main.rs  markdown.rs  models.rs  schema.rs
api/src/encryption/: error.rs  mod.rs
api/src/extractors/: credentials.rs
api/src/handlers/: mod.rs
api/src/handlers/internal/: comments.rs  mod.rs  organizations.rs  session.rs  streams.rs  teams.rs  topics.rs  users.rs
api/src/models/: comment.rs  member.rs  mod.rs  stream.rs  stream_permission.rs  team.rs  topic.rs  user.rs
api/src/store/: error.rs  mod.rs  organization_users.rs  organizations.rs  users.rs
api/src/stores/: comments.rs  members.rs  mod.rs  stream_permissions.rs  streams.rs  teams.rs  topics.rs  users.rs
app-web/: README.md  package-lock.json  package.json  vue.config.js
app-web/public/: index.html
app-web/src/: App.vue  main.ts  router.ts  types.d.ts
frontend/: README.md  package.json
server/src/: main.rs
(+125 files in other folders)
