[package]
name = "manx"
version = "0.1.0"
authors = ["kevlarr <echo1+git@dvnl.net>"]
edition = "2018"

[dependencies]
actix-web = "0.7.17"
argonautica = "0.2.0"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.3.3", features = ["postgres", "chrono"] }
dotenv = "0.10.1"
env_logger = "0.6.0"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.37"
